feat: add offscreencanvas

--- a/src/slides/part-1/vanilla-js/requestanimationframe/SpringAnimations.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/SpringAnimations.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 const subSectionTitle = "Animation Spring";
 ---
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<Slide sectionTitle={title} subSectionTitle="Cubic-Bezier">
 	<FlexContainer gap="2rem">
 		<img
 			src="https://help.figma.com/hc/article_attachments/360084136953/EASE_IN_OUT_BACK.gif"
