--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -7,6 +7,7 @@ import CanvasWebglLibs from "./CanvasWebglLibs.astro";
 import CanvasWebglRecap from "./CanvasWebglRecap.astro";
 import Shaders from "./shaders/Shaders.astro";
 import Threejs from "./Threejs.astro";
+import OffscreenCanvas from "./OffscreenCanvas.astro";
 
 const title = "Canvas WebGL";
 ---
@@ -17,6 +18,8 @@ const title = "Canvas WebGL";
 	<!-- <CanvasWebglLibs title={title} /> -->
 
 	<Shaders title={title} />
+
+	<OffscreenCanvas />
 
 	<!-- <CanvasWebglRecap title={title} /> -->
 	<!-- <Slide>
