--- a/src/slides/part-4/Why.astro
+++ b/src/slides/part-4/Why.astro
@@ -12,7 +12,7 @@ const subSectionTitle = "Pourquoi on fait ça déjà ?";
 	</Slide>
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<img data-src={gifExcited} alt="homme excité" />
-		<p>Tant d'animations possibles !</p>
+		<p>Tant de possibilités !</p>
 	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
