Revert "feat: replace particles demo with Three.js example"
This reverts commit b42b6493007c638184898fba4e4b59c3e5f542e8.

--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -118,14 +118,13 @@ void main() {
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h3>Vertex Shader</h3>
 	<p>geométrie</p>
-	<div class="content fullpage">
+	<div class="content p-0">
 		<VertexShaderDemoParticles client:visible />
 	</div>
 	<CodepenSource
-		pseudo="Three.js"
-		name="particles billboards example"
-		url="https://threejs.org/examples/#webgl_points_billboards"
-		platform="other"
+		pseudo="André Mattos"
+		name="Loading..."
+		url="https://codepen.io/ma77os/pen/JjMRmLP"
 	/>
 </Slide>
 
@@ -293,9 +292,5 @@ void main() {
 	.gpu-wrapper img.big {
 		height: 50vh;
 		object-fit: contain;
-	}
-	.fullpage {
-		position: relative;
-		z-index: -1;
 	}
 </style>
