refactor: update slides

--- a/src/slides/intro/RenderingPipeline.astro
+++ b/src/slides/intro/RenderingPipeline.astro
@@ -118,6 +118,18 @@ const subSectionTitle = "Du code au pixel";
 		<img class="meme" data-src={memeJs} alt="" />
 	</Slide>
 
+	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+		<div class="emoji"></div>
+		<img data-id="pipeline" data-src={pipeline} alt="" />
+		<div class="grid">
+			<img data-src={cpu} alt="" />
+			<img data-src={cpu} alt="" />
+			<img data-src={cpu} alt="" />
+			<img data-src={cpu} alt="" />
+			<img data-src={gpu} alt="" />
+		</div>
+	</Slide>
+
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 		<div class="emoji">🥳</div>
 		<img data-src={composite} alt="" />
