--- a/src/slides/part-1/vanilla-js/requestanimationframe/FpsMeter.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/FpsMeter.astro
@@ -9,7 +9,7 @@ const subSectionTitle = "Exemples";
 ---
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
-	<CodeBlock lang="javascript" lines="|1,7,4|1,7,2|1,7,3,6">
+	<CodeBlock lang="javascript">
 		{
 			`loop(() => {
   performance.mark("next");
