--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -9,7 +9,7 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 	<h1 class="ju">Julien Sulpis</h1>
 	<p>@jsulpis</p>
 	<p>Développeur front-end chez <img class="zenika-logo" src={ZenikaLogo} /></p>
-	<p>J'essaie de faire des interfaces qui claquent</p>
+	<p>J'essaie de faire des interfaces qui sortent de l'ordinaire</p>
 </Slide>
 
 <Slide>
@@ -27,7 +27,7 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 		</h1>
 		<div class="presenter">
 			<p>Julien Sulpis</p>
-			<small>Riviera Dev - 11/07/2023</small>
+			<small>LyonJS - 18/09/2023</small>
 		</div>
 	</div>
 </Slide>
