feat: replace vertex shader picture with displaced sphere

--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -110,8 +110,8 @@ void main() {
 	</div>
 	<CodepenSource
 		pseudo="jsulpis"
-		name="Image deformation with WebGL shaders"
-		url="https://codepen.io/jsulpis/pen/abQJOvV"
+		name="WebGL Displaced Sphere"
+		url="https://codepen.io/jsulpis/pen/abPLJyd"
 	/>
 </Slide>
 
