refactor: update slides

--- a/src/slides/part-1/css/transition/ExampleMovieCard.astro
+++ b/src/slides/part-1/css/transition/ExampleMovieCard.astro
@@ -101,7 +101,7 @@ const subSectionTitle = "Démos";
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
-	<CodeBlock lang="css">
+	<CodeBlock lang="css" lines="|7-11|1-5">
 		{
 			`.synopsis {
   ...
