--- a/src/slides/part-1/css/transition/TranslateDemo.astro
+++ b/src/slides/part-1/css/transition/TranslateDemo.astro
@@ -16,7 +16,7 @@ const subSectionTitle = "Utilisation";
 </SlideDemo>
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
-	<CodeBlock lang="css">
+	<CodeBlock lang="css" lines="|4-6|2|">
 		{
 			`.demo {
   transition: transform 800ms ease-in-out;
