--- a/src/slides/part-1/vanilla-js/web-animation-api/sections/Usage.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/sections/Usage.astro
@@ -15,9 +15,9 @@ const subSectionTitle = "Utilisation";
 	/>
 </Slide>
 
-<Slide sectionTitle={title} animate={false}>
+<!-- <Slide sectionTitle={title} animate={false}>
 	<img data-src={waapiSupport} alt="WAAPI support" />
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<SimpleTranslation client:visible />
