--- a/src/slides/part-2/Part2Title.astro
+++ b/src/slides/part-2/Part2Title.astro
@@ -1,11 +1,16 @@
 ---
 import Slide from "../../components/Slide.astro";
 import jsMeme from "../../assets/meme-js-libs.jpeg";
+import jsDev from "../../assets/meme-js-developer.jpeg";
 ---
 
 <Slide>
 	<p>Partie 2</p>
 	<h1>Comment animer le DOM : les librairies JavaScript</h1>
+</Slide>
+
+<Slide>
+	<img data-src={jsDev} alt="JS meme" />
 </Slide>
 
 <Slide>
