--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -19,7 +19,7 @@ const title = "Canvas WebGL";
 
 	<Shaders title={title} />
 
-	<OffscreenCanvas />
+	<!-- <OffscreenCanvas /> -->
 
 	<!-- <CanvasWebglRecap title={title} /> -->
 	<!-- <Slide>
