--- a/src/slides/part-2/js-libraries/vanilla-js/Anime.astro
+++ b/src/slides/part-2/js-libraries/vanilla-js/Anime.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 const subSectionTitle = "Vanilla JS";
 ---
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<AnimeTitle />
 	<p>Échelonnement ("stagger")</p>
 	<div class="content">
@@ -24,7 +24,7 @@ const subSectionTitle = "Vanilla JS";
 			}
 		</CodeBlock>
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<AnimeTitle />
