--- a/src/slides/part-2/js-libraries/vanilla-js/MotionOne.astro
+++ b/src/slides/part-2/js-libraries/vanilla-js/MotionOne.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 const subSectionTitle = "Vanilla JS";
 ---
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<MotionOneTitle />
 	<p>Scroll / Visibilité</p>
 	<div class="content">
@@ -22,7 +22,7 @@ const subSectionTitle = "Vanilla JS";
 			}
 		</CodeBlock>
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<MotionOneTitle />
