feat: add slides back !

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import Fast from "../slides/intro/Fast.astro";
 
 			<!-- Part 2: libraries -->
 			<Part2Title />
-			<!-- <Flip /> -->
+			<Flip />
 			<JSFrameworks />
 			<JSLibraries />
 			<Breathe />
