--- a/src/slides/part-1/css/animation/CSSAnimation.astro
+++ b/src/slides/part-1/css/animation/CSSAnimation.astro
@@ -31,11 +31,11 @@ const title = "Animation CSS";
 	<FakeDropdownMenu title={title} />
 	<Loaders title={title} />
 	<SVGAnimation title={title} />
-	<!-- <AnimationStates {title} /> -->
+	<AnimationStates {title} />
 
-	<!-- <CSSAnimationRecap title={title} /> -->
+	<CSSAnimationRecap title={title} />
 
-	<!-- <Slide>
+	<Slide>
 		<AnimationGraph />
-	</Slide> -->
+	</Slide>
 </section>
