--- a/src/slides/part-1/css/transition/CSSTransition.astro
+++ b/src/slides/part-1/css/transition/CSSTransition.astro
@@ -46,14 +46,14 @@ const title = "Transition CSS";
 	<TranslateDemo title={title} />
 	<TranslateLayout title={title} />
 	<RotationBezierCurves title={title} />
-	<!-- <TranslationCurves title={title} /> -->
+	<TranslationCurves title={title} />
 	<ExampleButton title={title} />
 	<ExampleMovieCard title={title} />
 	<Example3DCards title={title} />
 
-	<!-- <CSSTransitionRecap title={title} /> -->
+	<CSSTransitionRecap title={title} />
 
-	<!-- <Slide>
+	<Slide>
 		<TransitionGraph />
-	</Slide> -->
+	</Slide>
 </section>
