--- a/src/slides/part-1/css/transition/TranslationCurves.astro
+++ b/src/slides/part-1/css/transition/TranslationCurves.astro
@@ -1,30 +1,10 @@
 ---
-import CodeBlock from "../../../../components/CodeBlock.astro";
+import CodepenSource from "../../../../components/CodepenSource.astro";
 import SlideDemo from "../../../../components/SlideDemo.astro";
 
 const { title } = Astro.props;
-const subSectionTitle = "";
+const subSectionTitle = "Non linéaire";
 ---
-
-<SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
-	<p class="linear">
-		<label>
-			<input type="checkbox" />
-			<span class="card primary">Clique !</span>
-		</label>
-	</p>
-	<CodeBlock lang="css">
-		{
-			`.demo {
-  transition: transform 1.4s cubic-bezier(0.75, -0.8, 0.2, 1.8);
-
-  &:checked {
-    transform: translateX(150%);
-  }
-}`
-		}
-	</CodeBlock>
-</SlideDemo>
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
@@ -49,6 +29,11 @@ const subSectionTitle = "";
 			</label>
 		</p>
 	</div>
+	<CodepenSource
+		pseudo="jsulpis"
+		name="Curved CSS Transition"
+		url="https://codepen.io/jsulpis/pen/WNgqKPy"
+	/>
 </SlideDemo>
 
 <style lang="scss">
