--- a/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
@@ -42,11 +42,11 @@ const title = "requestAnimationFrame()";
 	<RafDemos title={title} />
 	<SpringAnimations title={title} />
 
-	<!-- <RafRecap title={title} /> -->
+	<RafRecap title={title} />
 
-	<!-- <Slide>
+	<Slide>
 		<RafGraph />
-	</Slide> -->
+	</Slide>
 </section>
 
 <style>
