--- a/src/slides/part-2/js-frameworks/JSFrameworks.astro
+++ b/src/slides/part-2/js-frameworks/JSFrameworks.astro
@@ -20,9 +20,9 @@ const title = "Frameworks JavaScript";
 	<Svelte title={title} />
 	<Angular title={title} />
 
-	<!-- <FrameworksRecap title={title} /> -->
-	<!--
+	<FrameworksRecap title={title} />
+
 	<Slide>
 		<FrameworksGraph />
-	</Slide> -->
+	</Slide>
 </section>
