--- a/src/slides/part-2/js-libraries/JSLibraries.astro
+++ b/src/slides/part-2/js-libraries/JSLibraries.astro
@@ -16,13 +16,13 @@ const title = "Librairies JavaScript";
 	</Slide>
 
 	<Framer title={title} />
-	<!-- <ReactSpring title={title} /> -->
+	<ReactSpring title={title} />
 	<VueUseMotion title={title} />
 	<VanillaJS title={title} />
 
-	<!-- <JSLibrariesRecap title={title} /> -->
+	<JSLibrariesRecap title={title} />
 
-	<!-- <Slide>
+	<Slide>
 		<LibrairiesGraph />
-	</Slide> -->
+	</Slide>
 </section>
