--- a/src/slides/part-3/canvas-2D/Canvas2D.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2D.astro
@@ -112,11 +112,11 @@ ctx.fillRect(100, 100, 200, 200);`
 		/>
 	</SlideDemo>
 
-	<!-- <Canvas2DRecap title={title} /> -->
+	<Canvas2DRecap title={title} />
 
-	<!-- <Slide>
+	<Slide>
 		<Canvas2DGraph />
-	</Slide> -->
+	</Slide>
 </section>
 
 <style>
