--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -15,16 +15,16 @@ const title = "Canvas WebGL";
 <section>
 	<CanvasWebglIntro title={title} />
 	<Threejs title={title} />
-	<!-- <CanvasWebglLibs title={title} /> -->
+	<CanvasWebglLibs title={title} />
 
 	<Shaders title={title} />
 
-	<!-- <OffscreenCanvas /> -->
+	<OffscreenCanvas />
 
-	<!-- <CanvasWebglRecap title={title} /> -->
-	<!-- <Slide>
+	<CanvasWebglRecap title={title} />
+	<Slide>
 		<CanvasWebglGraph />
-	</Slide> -->
+	</Slide>
 </section>
 
 <Slide>
