--- a/src/slides/intro/RenderingPipeline.astro
+++ b/src/slides/intro/RenderingPipeline.astro
@@ -26,7 +26,7 @@ const subSectionTitle = "Du code au pixel";
 		<img data-id="pipeline" data-src={pipeline} alt="" />
 	</Slide>
 
-	<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
+	<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 		<h3>JavaScript</h3>
 		<p>Modification dynamique de la page</p>
 		<img data-src={js} alt="" />
@@ -59,9 +59,9 @@ const subSectionTitle = "Du code au pixel";
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<p>Recalculé à chaque frame 🔄</p>
 		<img data-src={pipeline} alt="" />
-	</Slide> -->
+	</Slide>
 
-	<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<div class="wrapper">
 			<div>
 				<img data-src={cpu} alt="" />
@@ -101,7 +101,7 @@ const subSectionTitle = "Du code au pixel";
 				<p><strong>GPU</strong></p>
 			</div>
 		</div>
-	</Slide> -->
+	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 		<img data-id="pipeline" data-src={pipeline} alt="" />
