--- a/src/slides/part-4/Accessibility.astro
+++ b/src/slides/part-4/Accessibility.astro
@@ -10,19 +10,6 @@ const title = "Pour finir";
 		<h1>{"Accessibilité" + " "}</h1>
 	</Slide>
 
-	<!-- <Slide sectionTitle={title} subSectionTitle={"Accessibilité"}>
-		<h3>Réduction du mouvement</h3>
-		<div class="content p-0">
-			<CodeBlock lang="css">
-				{
-					`@media (prefers-reduced-motion: reduce) {
-  /* réduire le mouvement */
-}`
-				}
-			</CodeBlock>
-		</div>
-	</Slide> -->
-
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
@@ -36,7 +23,7 @@ const title = "Pour finir";
 		</div>
 	</Slide>
 
-	<!-- <Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
+	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Réduction du mouvement</h3>
 		<div class="content p-0">
 			<CodeBlock lang="css">
@@ -68,7 +55,7 @@ const title = "Pour finir";
 			</CodeBlock>
 			<span class="emoji">😀</span>
 		</div>
-	</Slide> -->
+	</Slide>
 
 	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Réduction du mouvement</h3>
@@ -83,7 +70,7 @@ const title = "Pour finir";
 		</div>
 	</Slide>
 
-	<!-- <Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
+	<Slide sectionTitle={title} subSectionTitle={"Accessibilité"} animate={false}>
 		<h3>Accessibilité du contenu</h3>
 		<div class="content p-0">
 			<CodeBlock lang="HTML" lines="|1,4,5,6">
@@ -98,7 +85,7 @@ const title = "Pour finir";
 				}
 			</CodeBlock>
 		</div>
-	</Slide> -->
+	</Slide>
 </section>
 
 <style>
