feat: update for DevFest Nantes

--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -7,7 +7,7 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 <Slide>
 	<p>Salut 👋 moi c'est</p>
 	<h1 class="ju">Julien Sulpis</h1>
-	<p>@jsulpis</p>
+	<b>@jsulpis</b>
 	<p>Développeur front-end chez <img class="zenika-logo" src={ZenikaLogo} /></p>
 	<p>J'essaie de faire des interfaces qui sortent de l'ordinaire</p>
 </Slide>
@@ -27,7 +27,7 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 		</h1>
 		<div class="presenter">
 			<p>Julien Sulpis</p>
-			<small>LyonJS - 18/09/2023</small>
+			<small>Devfest Nantes - 20/10/2023</small>
 		</div>
 	</div>
 </Slide>
@@ -90,8 +90,8 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 	.ju {
 		margin-bottom: 0;
 
-		+ p {
-			font-size: 1em;
+		+ b {
+			font-size: 1.2em;
 			margin-bottom: 1em;
 
 			+ p + p {
