--- a/src/slides/part-2/js-frameworks/vue/Vue.astro
+++ b/src/slides/part-2/js-frameworks/vue/Vue.astro
@@ -41,7 +41,7 @@ const subSectionTitle = "Les APIs intégrées";
 	<div class="content"><FakeDropdownMenu /></div>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<VueTitle />
 	<code data-id="transition">{`<Transition />`}</code>
 	<div class="content">
@@ -62,7 +62,7 @@ const subSectionTitle = "Les APIs intégrées";
 	<div class="content">
 		<VueTransition client:visible />
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<VueTitle />
