refactor: update slides

--- a/src/slides/part-3/canvas-webgl/CanvasWebglIntro.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebglIntro.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 <Slide>
 	<h1>{title + " "}</h1>
 	<p>
-		<strong>Usage:</strong> mettre une claque à vos utilisateurs à coup d'animations immersives
+		<strong>Usage:</strong> mettre des paillettes dans les yeux de vos utilisateurs
 	</p>
 </Slide>
 
