--- a/src/slides/part-1/vanilla-js/web-animation-api/sections/Usage.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/sections/Usage.astro
@@ -70,7 +70,7 @@ const subSectionTitle = "Utilisation";
 }`
 			}
 		</CodeBlock>
-		<CodeBlock lang="javascript" lines="|4-7|8-13|">
+		<CodeBlock lang="javascript" lines="|1,3,14|4-7|8-13|">
 			{
 				`const card = document.querySelector('.card');
 
