feat: update slides

--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -14,7 +14,7 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 			src={ZenikaLogo}
 		/>
 	</p>
-	<p>J'essaie de faire des interfaces qui sortent de l'ordinaire</p>
+	<p>J'essaie de faire des interfaces qu'on a <em>envie</em> d'utiliser</p>
 </Slide>
 
 <Slide>
@@ -28,7 +28,8 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 			<strong aria-hidden="true" class="border techniques">
 				techniques d'animation
 			</strong>
-			<strong class="techniques">techniques d'animation</strong><br /> en 2023
+			<strong class="techniques">techniques d'animation</strong><br />
+			sur le web
 		</h1>
 		<div class="presenter">
 			<p>Julien Sulpis</p>
