--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -8,7 +8,12 @@ import ZenikaLogo from "../../assets/logo-Zenika.png";
 	<p>Salut 👋 moi c'est</p>
 	<h1 class="ju">Julien Sulpis</h1>
 	<b>@jsulpis</b>
-	<p>Développeur front-end chez <img class="zenika-logo" src={ZenikaLogo} /></p>
+	<p>
+		Consultant web / Tech Lead front-end chez <img
+			class="zenika-logo"
+			src={ZenikaLogo}
+		/>
+	</p>
 	<p>J'essaie de faire des interfaces qui sortent de l'ordinaire</p>
 </Slide>
 
